# fclean

./: .gitignore  README.md  config.example.yaml  pyproject.toml
src/fclean/: __init__.py  cleaner.py  cli.py  config.py  reporter.py  safelist.py  scanner.py  suggest.py
src/fclean/rules/: __init__.py  age.py  duplicate.py  pattern.py  size.py
tests/: test_cleaner.py  test_cli.py  test_cli_extended.py  test_config.py  test_rules.py  test_scanner.py  test_suggest.py
