[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fclean"
version = "0.1.0"
description = "CLI tool for cleaning up old, large, and duplicate files"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9",
    "rich>=13.0",
    "xxhash>=3.0",
    "send2trash>=1.8",
    "platformdirs>=4.0",
    "pyyaml>=6.0",
    "humanize>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-tmp-files>=0.0.2",
]

[project.scripts]
fclean = "fclean.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
